# minimalist-py-package

./: CHANGELOG.md  Makefile  README.md  cookiecutter.json  pyproject.toml  setup.sh  test_template.sh
.github/: copilot-instructions.md
src/my_python_package/: __init__.py  core.py
tests/: __init__.py  test_core.py
{{cookiecutter.project_slug}}/: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.sh
{{cookiecutter.project_slug}}/.github/: copilot-instructions.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  core.py
{{cookiecutter.project_slug}}/tests/: test_core.py
